# GolemMediaTrackerBot

./: Cargo.toml  README.md
add_book_dialog/: Cargo.toml
add_book_dialog/src/: lib.rs
add_book_dialog/wit/: add-book-dialog.wit
add_movie_dialog/: Cargo.toml
add_movie_dialog/src/: lib.rs
add_movie_dialog/wit/: add-movie-dialog.wit
add_quote_dialog/: Cargo.toml
add_quote_dialog/src/: lib.rs
add_quote_dialog/wit/: add-quote-dialog.wit
bot/: Cargo.toml
bot/src/: add_book_dialog.rs  add_movie_dialog.rs  add_quote_dialog.rs  bot.rs  dialogs.rs  domain.rs  env.rs  lib.rs  workers.rs
bot/wit/: golem-telegram-bot.wit
dialog_engine/: Cargo.toml
dialog_engine/src/: lib.rs
telegram_api/: Cargo.toml
telegram_api/src/: lib.rs
