[package]
name = "add_book_dialog"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component", rev = "e57d1d1405ed2d76f1f3d8647480dea700379ff8" }
reqwest = { git = "https://github.com/zivergetech/reqwest", branch = "update-aug-2023", features = ["json"] }
frankenstein = { version = "0.27", default-features = false, features = ["telegram-trait", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.48"
typed-builder = "0.16.0"
dialog_engine = { path = "../dialog_engine" }
telegram_api = { path = "../telegram_api" }

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]
