[package]
name = "telegram_api"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { git = "https://github.com/zivergetech/reqwest", branch = "update-aug-2023", features = ["json"] }
frankenstein = { version = "0.27", default-features = false, features = ["telegram-trait", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.48"
typed-builder = "0.16.0"
